<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Invertase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cont_desc">Image View</string>
    <string name="instr_msg">Enter the hex color code you want to invert here:</string>
    <string name="edt_field">Enter Hex Code</string>
    <string name="old_code">Old Code</string>
    <string name="new_code">New Code</string>
    <string name="message">&lt;b>&lt;font color=\"#33b5e5\">Invertase&lt;/font>&lt;/b>&lt;br>&lt;br>Invertase is a hex inverting app just made for convenience of the developers and programmers who want to invert the normal hex codes to inverted ones used in some of the smali files in Android Apps.&lt;br>&lt;br>&lt;b>&lt;i>&lt;font color=\"#33b5e5\">Scope&lt;/font>&lt;/i>&lt;/b>&lt;br>&lt;br>Though the scope of this app is very small, confining to very small occurrences of inverted codes in fewer Android smali files, it may prove handy to people who are more into exploring part of Android. Trying different color codes for getting a perfect color combination can be very time consuming, specially when you have to invert them with a pattern. Though working and principle of this app is very simple, it further simplifies the rather simple process of inverting.&lt;br>&lt;br>&lt;b>&lt;i>&lt;font color=\"#33b5e5\">Use&lt;/font>&lt;/i>&lt;/b>&lt;br>&lt;br>Use of this app is very simple, you are provided with a text box where you can write the hex code you want to &lt;b>invert&lt;/b>.&lt;br>&lt;i>For example,&lt;/i>&lt;br>You want to invert the hex color &lt;font color=\"#33b5e5\">#ff33b5e5&lt;/font>, write &lt;b>ff33b5e5&lt;/b> (&lt;i>Values without alpha are also supported, for example : &lt;b>33b5e5&lt;/b>&lt;/i>) in the text box and click the tick button on the right side of the box.(&lt;i>Note: Text box is only for hex codes, any other text in the box won\'t work&lt;/i>).&lt;br>A panel will appear with your entered &lt;i>Old Code&lt;/i> and inverted &lt;i>New Code&lt;/i>. As per this example, new code will be &lt;font color=\"#33b5e5\">#cc4a1a&lt;/font>. A color preview is also provided for a better look on what you\'re dealing with. Note that the color will not change but only the code will, the color will remain blue but the new code will be required in some Android files such as &lt;i>Clock.smali in SystemUI.apk, BatteryHistoryChart.smali and LinearColorBar.smali in Settings.apk&lt;/i>.&lt;br>Though the new code will produce the same color effect as normal hex codes in Android files, it will refer to a different color in normal hex files, as if refers to a different color in normal hex system.&lt;br>&lt;br>In similar way, you can invert the Android inverted codes to normal hex codes, but the color shown in this case would not be the real hex color, to see what the inverted Android hex is referring to, click on the &lt;i>New Code&lt;/i> panel and your new code will be treated as normal hex and it\'s true color will be shown with the New Code again being the Android one.&lt;br>&lt;i>You can long press on New Code or Old Code to copy it to the Clipboard.&lt;/i>&lt;br>&lt;br>&lt;br>To know more about how to use these new codes you got, see this guide on how to change the color of your Battery Statistics Graph:&lt;br>http://goo.gl/Mjc6Xe</string>
    <string name="title_activity_sharer_layout">MainActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="open_source_ftw">This app is Open Source. You can find it\'s source here:</string>
    <string name="credits">Credits</string>
    <string name="credit_content">The app is made without use of any libraries but it has used some resources from these sources:\n\n\n&#8226;ActionBarSherlock\n\tJake Wharthon\n\tLicensed under Apache v2\n\n&#8226;AOSP\n\tGoogle\n\tLicensed under Apache v2\n\n&#8226;Action Bar Icons\n\tAndroid Design Team\n\n&#8226;stackoverflow\n\n&#8226;Photoshop\n\n&#8226;Android Official Documentation </string>
    <string name="dev_name">iamareebjamal</string>
    <string name="location">Location : Aligarh, UP, INDIA, Asia, Earth, Solar System, Right Wing- Milky Way Galaxy, Universe</string>
    <string name="about_location">Location : India</string>
    <string name="about_age">Age : 17</string>
    <string name="about_likes">Likes : Technology, XDA</string>
    <string name="about_dislikes">Dislikes : NullPointerException</string>
    <string name="about_sharer">You can find me here:</string>
    <string name="sharer_fb">Facebook</string>
    <string name="sharer_tw">Twitter</string>
    <string name="sharer_gp">Google Plus</string>
    <string name="sharer_xd">XDA</string>
    <string name="sharer_others">MY OTHER APPS ON GOOGLE PLAY</string>

</resources>