<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
    
    <LinearLayout
        	android:id="@+id/LoL1"
			android:layout_width="fill_parent"
			android:layout_alignParentTop="true"
        	android:layout_centerHorizontal="true"
			android:layout_height="48dp"
			android:gravity="center_vertical"
			android:background="@drawable/abs__ab_stacked_solid_light_holo"
			android:orientation="horizontal" >

			<ImageView
				android:layout_width="40dp"
				android:layout_height="40dp"
				android:layout_marginLeft="5dp"
				android:padding="3.0dip"
				android:src="@drawable/ic_launcher" />

			<TextView
			    android:id="@+id/TV1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:textSize="18.0sp"
				android:padding="0.0dip"
				android:textColor="@android:color/black"
				android:text="@string/app_name" />


		</LinearLayout>
		
     <LinearLayout
            android:id="@+id/LoL2"
            android:layout_below="@+id/LoL1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/instr_msg"
                android:textSize="13.4sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/ET1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/edt_field" >

                    
                </EditText>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:onClick="btn"
                    android:src="@drawable/done" />
            </LinearLayout>
            
      </LinearLayout>

    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/LoL2"
        android:layout_above="@+id/LoL3" >

       

            <LinearLayout
                android:id="@+id/hiddenLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/OldCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/selected"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/old_code"
                            android:textColor="#ff33b5e5"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/TVOld"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="22dp"
                        android:background="#20000000"
                        android:orientation="vertical" >
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/NewCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/selected"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:text="@string/new_code"
                            android:textColor="#ff33b5e5"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/TV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL2"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/transparent"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/LL1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="#00000000"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:id="@+id/LoL3"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/abs__ab_bottom_solid_inverse_holo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/queSh"
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:background="@drawable/abs__list_selector_holo_dark"
            android:onClick="sharerMenu"
            android:padding="10dp"
            android:src="@drawable/ic_cont" />

        <ImageView
            android:id="@+id/closeIc"
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:src="@drawable/ic_close"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/abs__list_selector_holo_dark"
            android:onClick="closeMenu" />
        
        <ImageView
            android:id="@+id/queIc"
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:src="@drawable/ic_que"
            android:background="@drawable/abs__list_selector_holo_dark"
            android:onClick="diagMenu" />
        
    </LinearLayout>

</RelativeLayout>